@@ -175,6 +175,7 @@ typedef struct _DC_TRIGGER
 	char		*new_error;
 	zbx_timespec_t	timespec;
 	int		lastchange;
+	unsigned char	topoindex;
 	unsigned char	priority;
 	unsigned char	type;
 	unsigned char	value;
