@@ -566,33 +566,86 @@ int	process_trigger(char **sql, size_t *sql_alloc, size_t *sql_offset, const str
 	return ret;
 }
 
+/******************************************************************************
+ *                                                                            *
+ * Comments: helper function for process_triggers()                           *
+ *                                                                            *
+ ******************************************************************************/
+static int	zbx_trigger_topoindex_compare(const void *d1, const void *d2)
+{
+	const zbx_ptr_pair_t	*p1 = (const zbx_ptr_pair_t *)d1;
+	const zbx_ptr_pair_t	*p2 = (const zbx_ptr_pair_t *)d2;
+
+	const DC_TRIGGER	*t1 = (const DC_TRIGGER *)p1->first;
+	const DC_TRIGGER	*t2 = (const DC_TRIGGER *)p2->first;
+
+	ZBX_RETURN_IF_NOT_EQUAL(t1->topoindex, t2->topoindex);
+
+	return 0;
+}
+
 void	process_triggers(zbx_vector_ptr_t *triggers)
 {
-	const char	*__function_name = "process_triggers";
+	const char		*__function_name = "process_triggers";
 
-	char		*sql = NULL;
-	size_t		sql_alloc = 16 * ZBX_KIBIBYTE, sql_offset = 0;
-	int		i;
-	DC_TRIGGER	*trigger;
+	int			i, count = 0;
+	char			*sql = NULL;
+	size_t			sql_alloc, sql_offset;
+	zbx_vector_ptr_pair_t	trigger_sqls;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() values_num:%d", __function_name, triggers->values_num);
 
 	if (0 == triggers->values_num)
 		goto out;
 
+	zbx_vector_ptr_pair_create(&trigger_sqls);
+	zbx_vector_ptr_pair_reserve(&trigger_sqls, triggers->values_num);
+
+	for (i = 0; i < triggers->values_num; i++)
+	{
+		zbx_ptr_pair_t	trigger_sql;
+
+		trigger_sql.first = triggers->values[i];
+		trigger_sql.second = NULL;
+
+		zbx_vector_ptr_pair_append(&trigger_sqls, trigger_sql);
+	}
+
+	zbx_vector_ptr_pair_sort(&trigger_sqls, zbx_trigger_topoindex_compare);
+
+	for (i = 0; i < trigger_sqls.values_num; i++)
+	{
+		zbx_ptr_pair_t	*trigger_sql = &trigger_sqls.values[i];
+		DC_TRIGGER	*trigger = (DC_TRIGGER *)trigger_sql->first;
+
+		sql_alloc = 0;
+		sql_offset = 0;
+
+		count += (SUCCEED == process_trigger((char **)&trigger_sql->second, &sql_alloc, &sql_offset, trigger));
+	}
+
+	if (0 == count)
+		goto clean;
+
+	zbx_vector_ptr_pair_sort(&trigger_sqls, ZBX_DEFAULT_UINT64_PTR_COMPARE_FUNC);
+
+	sql_alloc = 16 * ZBX_KIBIBYTE;
+	sql_offset = 0;
+
 	sql = zbx_malloc(sql, sql_alloc);
 
 	DBbegin_multiple_update(&sql, &sql_alloc, &sql_offset);
 
-	for (i = 0; i < triggers->values_num; i++)
+	for (i = 0; i < trigger_sqls.values_num; i++)
 	{
-		trigger = (DC_TRIGGER *)triggers->values[i];
+		if (NULL == trigger_sqls.values[i].second)
+			continue;
 
-		if (SUCCEED == process_trigger(&sql, &sql_alloc, &sql_offset, trigger))
-		{
-			zbx_strcpy_alloc(&sql, &sql_alloc, &sql_offset, ";\n");
-			DBexecute_overflowed_sql(&sql, &sql_alloc, &sql_offset);
-		}
+		zbx_strcpy_alloc(&sql, &sql_alloc, &sql_offset, trigger_sqls.values[i].second);
+		zbx_strcpy_alloc(&sql, &sql_alloc, &sql_offset, ";\n");
+		DBexecute_overflowed_sql(&sql, &sql_alloc, &sql_offset);
+
+		zbx_free(trigger_sqls.values[i].second);
 	}
 
 	DBend_multiple_update(&sql, &sql_alloc, &sql_offset);
@@ -601,6 +654,8 @@ void	process_triggers(zbx_vector_ptr_t *triggers)
 		DBexecute("%s", sql);
 
 	zbx_free(sql);
+clean:
+	zbx_vector_ptr_pair_destroy(&trigger_sqls);
 out:
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
