@@ -5,6 +5,7 @@ New features:
 ..F....... [ZBX-8113] setup now stores info in session instead of cookies (Andrejs)
 
 Bug fixes:
+........S. [ZBX-3163] fixed trigger evaluation order so that it takes dependencies into account (asaveljevs)
 A.F....... [ZBX-7373] improved performance of latest data and item overview pages by taking data for limited period only (Pavels)
 ..F....... [ZBX-8200] improved performance of Monitoring / Events page (Krists)
 ..F....... [ZBX-7536] now host visible names are shown in popups instead of hostname (Andrejs)
